Added the Subjcet Pages and related stuff by the 2006/Shubha,m

--- a/resources.html
+++ b/resources.html
@@ -1047,7 +1047,7 @@
                                     microprocessors & Microcontrollers
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem 5/AMM_6P401.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1061,7 +1061,7 @@
                             <div class="card">
                                 <p><strong>MOC</strong> - Mobile Computing</p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem 5/moc_6P402.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1077,7 +1077,7 @@
                                     <strong>LPL</strong> - Linux Programming Lab
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem 5/LPL_6P404.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1094,7 +1094,7 @@
                                     Management System
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem 5/ISMS_6P405.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1107,11 +1107,10 @@
                             style="display: none">
                             <div class="card">
                                 <p>
-                                    <strong>DWM</strong> - Data Warehousing &
-                                    Mining
+                                    <strong>DWM</strong> -Data Warehousing and Mining
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem 5/dwm_6P406.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1125,7 +1124,7 @@
                             <div class="card">
                                 <p><strong>CC</strong> - Cloud Computing</p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem 5/CC_6P407.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1139,7 +1138,7 @@
                             <div class="card">
                                 <p><strong>SMR</strong> - Seminar</p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem 5/Seminar_6S501.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1157,7 +1156,7 @@
                                     Development
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem6/edp_6G306.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1174,7 +1173,7 @@
                                     Cyber Laws
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem6/CS&CL_6P501.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1188,7 +1187,7 @@
                             <div class="card">
                                 <p><strong>PW</strong> - Project Work</p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem6/Project_6S502.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1205,7 +1204,7 @@
                                     Programming
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem6/AJp_6S504.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1219,7 +1218,7 @@
                             <div class="card">
                                 <p><strong>ST</strong> - Software Testing</p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem6/ST6S505.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1236,7 +1235,7 @@
                                     Management Systems
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem6/ADBMS_6P502.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1253,7 +1252,7 @@
                                     Information System
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem6/GIS_6P503.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1270,7 +1269,7 @@
                                     UML
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem6/UML_6P504.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -1287,7 +1286,7 @@
                                     Training
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 3/sem6/ipt_6S503.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
