--- a/src/pages/resources/co-resources/Year 3/sem 5/AMM_6P401.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/AMM_6P401.html
@@ -49,13 +49,13 @@
 
         <main>
             <img
-                src="subject-image.jpg"
+                src="../../../../../../public/images/subjects_image/5th sem/amm.webp"
                 alt="Subject Image"
                 class="subject-image"
-                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
+                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Advance Microprocessor And Microcontrollers</h1>
+                <h1>Advanced Microprocessor and Microcontroller</h1>
                 <p>
                     <strong>Subject Code:</strong>
                     <span class="tag">6P401</span>
@@ -74,8 +74,10 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    This subject introduces the fundamental concepts required
-                    for mastering the field of the microprocessors and the Microcontrollers.
+                    Advanced Microprocessor & Microcontroller is applied level course aims for interfacing of 
+                    various peripheral elements with microcontroller to design an automated system. This course 
+                    covers introduction to families of microprocessors from 32 bit 64 bit and embed C programming 
+                    environment to control peripheral devices. 
                 </p>
             </section>
 
@@ -126,7 +128,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -137,7 +139,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <a href="document.pdf" class="download-link"
@@ -147,7 +149,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <a href="document.pdf" class="download-link"
@@ -163,7 +165,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -174,7 +176,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -185,7 +187,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -202,7 +204,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -213,7 +215,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -224,7 +226,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -245,7 +247,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -256,7 +258,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -272,7 +274,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -283,7 +285,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -299,7 +301,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -310,7 +312,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -331,7 +333,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -342,7 +344,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -358,7 +360,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -369,7 +371,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -385,7 +387,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -396,7 +398,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -415,7 +417,7 @@
                     <div class="pdf-container">
                         <img
                             src="pdf-preview.jpg"
-                            onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                            onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                             alt="Curriculum1" />
                         <p class="pdf-title">Video Title</p>
                         <p class="pdf-author">Author Name</p>
@@ -424,7 +426,7 @@
                     <div class="pdf-container">
                         <img
                             src="pdf-preview.jpg"
-                            onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                            onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                             alt="Curriculum1" />
                         <p class="pdf-title">Video Title</p>
                         <p class="pdf-author">Author Name</p>
@@ -438,7 +440,7 @@
                     If you have additional material to contribute, please use
                     the form below:
                 </p>
-                <a href="https://forms.gle/example" class="button"
+                <a href="https://forms.gle/UN2cS6kE7yuGG9xk8" class="button"
                     >Upload via Google Form</a
                 >
             </section>
