--- a/src/pages/resources/co-resources/Year 3/sem 5/Industrial_Organization_and_management_6G305.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/Industrial_Organization_and_management_6G305.html
@@ -49,7 +49,7 @@
 
         <main>
             <img
-                src="subject-image.jpg"
+                src="../../../../../../public/images/subjects_image/5th sem/iom.webp"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
@@ -66,7 +66,7 @@
                 <p>
                 </p>
                 <div>
-                    <strong>Category:</strong> <span class="tag">Degree</span>
+                    <strong>Category:</strong> <span class="tag">non-degree</span>
                 </div>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
@@ -74,8 +74,14 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    This subject introduces the fundamental concepts required
-                    for mastering the field.
+                    Diploma graduate works at middle management level in the industries/engineering organizations. 
+                    Therefore he has to be proficient in planning, organizing & coordinating various activities of 
+                    industries/ organizations or when he is required to work in different types of projects. They are also 
+                    expected to deal with workforce and management problems. In the present era of competition, optimum 
+                    utilization of the resources with achieving higher productivity is essential for any industry to survive. 
+                    Quality and cost controls are also other important factors which contribute to the day to day supervision 
+                    issues. This course aims to deal effectively with such issues along with familiarization of acts and laws 
+                    applied to industries. 
                 </p>
             </section>
 
@@ -126,7 +132,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -137,7 +143,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <a href="document.pdf" class="download-link"
@@ -147,7 +153,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <a href="document.pdf" class="download-link"
@@ -163,7 +169,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -174,7 +180,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -185,7 +191,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -202,7 +208,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -213,7 +219,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -224,7 +230,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -245,7 +251,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -256,7 +262,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -272,7 +278,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -283,7 +289,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -299,7 +305,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -310,7 +316,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -331,7 +337,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -342,7 +348,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -358,7 +364,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -369,7 +375,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -385,7 +391,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -396,7 +402,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -415,7 +421,7 @@
                     <div class="pdf-container">
                         <img
                             src="pdf-preview.jpg"
-                            onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                            onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                             alt="Curriculum1" />
                         <p class="pdf-title">Video Title</p>
                         <p class="pdf-author">Author Name</p>
@@ -424,7 +430,7 @@
                     <div class="pdf-container">
                         <img
                             src="pdf-preview.jpg"
-                            onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
+                            onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                             alt="Curriculum1" />
                         <p class="pdf-title">Video Title</p>
                         <p class="pdf-author">Author Name</p>
@@ -438,7 +444,7 @@
                     If you have additional material to contribute, please use
                     the form below:
                 </p>
-                <a href="https://forms.gle/example" class="button"
+                <a href="https://forms.gle/UN2cS6kE7yuGG9xk8" class="button"
                     >Upload via Google Form</a
                 >
             </section>
