--- a/src/pages/resources/co-resources/Year 3/sem 5/Seminar_6S501.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/Seminar_6S501.html
@@ -49,19 +49,19 @@
 
         <main>
             <img
-                src="../../../../../../public/images/subjects_image/5th sem/cn.webp"
+                src="../../../../../../public/images/subjects_image/5th sem//seminar.webp"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Computer Network</h1>
+                <h1>Seminar</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">6P403</span>
+                    <span class="tag">6S501</span>
                 </p>
                 <div>
-                    <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong><span class="tag">Practical</span>
                 </div>
                 <p>
                 </p>
@@ -74,10 +74,14 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Computer networks is an applied level course aims to use and share resources over the network 
-                    for global connectivity. This course obtains requisite knowledge about hardware and software 
-                    tools and requirements of networks to acquire skills for establishment of network. Students will 
-                    learn to maintain and troubleshoot computer networks with its resources and services. 
+                    Seminar is the important aspect of any curriculum. Here the students has unlimited scope to 
+                    integrate his knowledge and skills. This course is essential to understand the recent 
+                    developments and latest trends in the field. This will help the students to acquire the skill like 
+                    mining for information, analysis, communication, presentation skills etc. For effective 
+                    presentation student must have good communication skill. With a given time limit student 
+                    should be able to express his ideas and concepts, thoroughly in front of faculty members and 
+                    other students, student should be able satisfy the queries raised by them as well as student 
+                    should learn to take any feedback positively. 
                 </p>
             </section>
 
@@ -100,11 +104,11 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>80</td>
-                                <td>20</td>
+                                <td>00</td>
+                                <td>00</td>
                                 <td>25</td>
-                                <td>25</td>
-                                <td>150</td>
+                                <td>50</td>
+                                <td>75</td>
                             </tr>
                         </tbody>
                     </table>
