--- a/src/pages/resources/co-resources/Year 3/sem6/Project_6S502.html
+++ b/src/pages/resources/co-resources/Year 3/sem6/Project_6S502.html
@@ -49,19 +49,19 @@
 
         <main>
             <img
-                src="../../../../../../public/images/subjects_image/5th sem/cn.webp"
+                src="../../../../../../public/images/subjects_image/6th sem/project.webp"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Computer Network</h1>
+                <h1>Project Work</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">6P403</span>
+                    <span class="tag">6S502</span>
                 </p>
                 <div>
-                    <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong><span class="tag">Practical</span>
                 </div>
                 <p>
                 </p>
@@ -74,10 +74,19 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Computer networks is an applied level course aims to use and share resources over the network 
-                    for global connectivity. This course obtains requisite knowledge about hardware and software 
-                    tools and requirements of networks to acquire skills for establishment of network. Students will 
-                    learn to maintain and troubleshoot computer networks with its resources and services. 
+                    One of the basic aim of “Project “ is to develop the ability of “learning to Learn “ on his own 
+                    and work in team. Project course provides opportunities for students to keep pace with future 
+                    changes in technology and in the acquisition of knowledge and skills as and when needed. The 
+                    course of the “Project” is designed with an aim to all these requirements of the students which 
+                    will include planning of the Programme, which must be completed within the time allocated. 
+                    The Project should never have a single solution and process of arriving at a particular solution, 
+                    the student must be required to make number of decisions after study information as he has 
+                    gathered from experiments, surveys, analysis etc.  
+                    The programme aims at developing in the student, knowledge and skills to match the current 
+                    and projected needs of industry/ user systems, social awareness and professional attitudes. In 
+                    relation to the course and topics to be taught, the student will have to constantly update 
+                    himself and keep pace with the changing technologies and the current and projected needs of 
+                    user systems.   
                 </p>
             </section>
 
@@ -100,10 +109,10 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>80</td>
-                                <td>20</td>
-                                <td>25</td>
-                                <td>25</td>
+                                <td>00</td>
+                                <td>00</td>
+                                <td>50</td>
+                                <td>100</td>
                                 <td>150</td>
                             </tr>
                         </tbody>
