--- a/src/pages/resources/co-resources/Year 3/sem6/edp_6G306.html
+++ b/src/pages/resources/co-resources/Year 3/sem6/edp_6G306.html
@@ -49,24 +49,24 @@
 
         <main>
             <img
-                src="../../../../../../public/images/subjects_image/5th sem/cn.webp"
+                src="../../../../../../public/images/subjects_image/6th sem/edp.webp"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Computer Network</h1>
+                <h1>Entrepreneurship Development </h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">6P403</span>
+                    <span class="tag">6S306</span>
                 </p>
                 <div>
-                    <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong><span class="tag">Practical</span>
                 </div>
                 <p>
                 </p>
                 <div>
-                    <strong>Category:</strong> <span class="tag">Degree</span>
+                    <strong>Category:</strong> <span class="tag">non-degree</span>
                 </div>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
@@ -74,10 +74,12 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Computer networks is an applied level course aims to use and share resources over the network 
-                    for global connectivity. This course obtains requisite knowledge about hardware and software 
-                    tools and requirements of networks to acquire skills for establishment of network. Students will 
-                    learn to maintain and troubleshoot computer networks with its resources and services. 
+                    In the post liberalization era significant growth in industrial sector has led to creation of huge 
+                    opportunities in manufacturing and service sector. In such a scenario especially in Indian contest 
+                    it has led to innumerable opportunities for first generation entrepreneurs on a large scale. 
+                    Therefore it is expected that engineers need to be developed for manufacturing, service sector and 
+                    entrepreneurship development. This course, which represents Allied level of courses, aims at 
+                    imparting entrepreneurial skills amongst engineers of all disciplines. 
                 </p>
             </section>
 
@@ -100,11 +102,11 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>80</td>
-                                <td>20</td>
-                                <td>25</td>
-                                <td>25</td>
-                                <td>150</td>
+                                <td>00</td>
+                                <td>00</td>
+                                <td>00</td>
+                                <td>50</td>
+                                <td>50</td>
                             </tr>
                         </tbody>
                     </table>
