--- a/src/pages/resources/co-resources/Year 3/sem 5/ISMS_6P405.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/ISMS_6P405.html
@@ -49,16 +49,16 @@
 
         <main>
             <img
-                src="../../../../../../public/images/subjects_image/5th sem/cn.webp"
+                src="../../../../../../public/images/subjects_image/5th sem/isms.webp"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Computer Network</h1>
+                <h1>Information Storage Management System</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">6P403</span>
+                    <span class="tag">6P405</span>
                 </p>
                 <div>
                     <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
@@ -66,7 +66,7 @@
                 <p>
                 </p>
                 <div>
-                    <strong>Category:</strong> <span class="tag">Degree</span>
+                    <strong>Category:</strong> <span class="tag">Degree</span><span class="tag">Elective</span>
                 </div>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
@@ -74,10 +74,11 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Computer networks is an applied level course aims to use and share resources over the network 
-                    for global connectivity. This course obtains requisite knowledge about hardware and software 
-                    tools and requirements of networks to acquire skills for establishment of network. Students will 
-                    learn to maintain and troubleshoot computer networks with its resources and services. 
+                    Information Storage Management System is a applied level course aims to recognize the 
+                    importance of Storage, Evolution of Storage Technology, Data and Information, Structured and 
+                    Unstructured Information, Information Life cycle Management. This course gives insight to 
+                    protect data, RAID, RAID levels, Implementation of Software and Hardware RAID, RAID 
+                    Impact on Disk Performance.  
                 </p>
             </section>
 
