--- a/src/pages/resources/co-resources/Year 3/sem 5/LPL_6P404.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/LPL_6P404.html
@@ -49,16 +49,16 @@
 
         <main>
             <img
-                src="../../../../../../public/images/subjects_image/5th sem/cn.webp"
+                src="../../../../../../public/images/subjects_image/5th sem/lpl.webp"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Computer Network</h1>
+                <h1>Linux Programming Lab</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">6P403</span>
+                    <span class="tag">6P404</span>
                 </p>
                 <div>
                     <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
@@ -74,10 +74,11 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Computer networks is an applied level course aims to use and share resources over the network 
-                    for global connectivity. This course obtains requisite knowledge about hardware and software 
-                    tools and requirements of networks to acquire skills for establishment of network. Students will 
-                    learn to maintain and troubleshoot computer networks with its resources and services. 
+                    Linux Programming Lab is an applied level course to perform various activities on open source 
+                    operating system.  This course aims at extending the knowledge of open source operating 
+                    system and get exposure of handling system call that directly talk to  the kernel. This course 
+                    includes basics of Linux operating system, system calls, Shell programming and process 
+                    management. 
                 </p>
             </section>
 
@@ -100,11 +101,11 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>80</td>
-                                <td>20</td>
-                                <td>25</td>
-                                <td>25</td>
-                                <td>150</td>
+                                <td>00</td>
+                                <td>00</td>
+                                <td>50</td>
+                                <td>50</td>
+                                <td>100</td>
                             </tr>
                         </tbody>
                     </table>
