--- a/src/pages/resources/co-resources/Year 3/sem 5/moc_6P402.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/moc_6P402.html
@@ -49,16 +49,16 @@
 
         <main>
             <img
-                src="../../../../../../public/images/subjects_image/5th sem/cn.webp"
+                src="../../../../../../public/images/subjects_image/5th sem/moc.webp"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Computer Network</h1>
+                <h1>Mobile Computing</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">6P403</span>
+                    <span class="tag">6P402</span>
                 </p>
                 <div>
                     <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
@@ -66,7 +66,7 @@
                 <p>
                 </p>
                 <div>
-                    <strong>Category:</strong> <span class="tag">Degree</span>
+                    <strong>Category:</strong> <span class="tag">non-degree</span>
                 </div>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
@@ -74,10 +74,12 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Computer networks is an applied level course aims to use and share resources over the network 
-                    for global connectivity. This course obtains requisite knowledge about hardware and software 
-                    tools and requirements of networks to acquire skills for establishment of network. Students will 
-                    learn to maintain and troubleshoot computer networks with its resources and services. 
+                    Mobile computing is applied level course that designed to needs more skilled technicians for 
+                    operation, maintenance & servicing of mobile cellular system. As exponential growth in mobile 
+                    computing, student needs to learn different technologies such as GSM and  CDMA 
+                    their 
+                    variations and the 4G. This course includes wireless communication, mobile handset, cellular 
+                    concepts, VoIP, WLL, WAP and WML. 
                 </p>
             </section>
 
