--- a/src/pages/resources/co-resources/Year 3/sem6/ADBMS_6P502.html
+++ b/src/pages/resources/co-resources/Year 3/sem6/ADBMS_6P502.html
@@ -49,19 +49,19 @@
 
         <main>
             <img
-                src="../../../../../../public/images/subjects_image/5th sem/cn.webp"
+                src="../../../../../../public/images/subjects_image/6th sem/adbms.webp"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Computer Network</h1>
+                <h1>Advanced Database Management System</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">6P403</span>
+                    <span class="tag">6P502</span>
                 </p>
                 <div>
-                    <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong><span class="tag">Lecture</span><span class="tag">Practical</span>
                 </div>
                 <p>
                 </p>
@@ -74,10 +74,10 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Computer networks is an applied level course aims to use and share resources over the network 
-                    for global connectivity. This course obtains requisite knowledge about hardware and software 
-                    tools and requirements of networks to acquire skills for establishment of network. Students will 
-                    learn to maintain and troubleshoot computer networks with its resources and services. 
+                    Advanced database management system is a diversified level course aims at designing of 
+                    database for business, scientific and engineering application. At the end of this course the 
+                    students will be able to develop simple and advanced PL/SQL code blocks also able to design 
+                    relational database for industrial and educational projects.
                 </p>
             </section>
 
