--- a/src/pages/resources/co-resources/Year 3/sem6/AJp_6S504.html
+++ b/src/pages/resources/co-resources/Year 3/sem6/AJp_6S504.html
@@ -49,19 +49,19 @@
 
         <main>
             <img
-                src="../../../../../../public/images/subjects_image/5th sem/cn.webp"
+                src="../../../../../../public/images/subjects_image/6th sem/ajp.webp"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Computer Network</h1>
+                <h1>Advanced Java Programming</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">6P403</span>
+                    <span class="tag">6S504</span>
                 </p>
                 <div>
-                    <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong><span class="tag">Lecture</span><span class="tag">Practical</span>
                 </div>
                 <p>
                 </p>
@@ -74,10 +74,9 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Computer networks is an applied level course aims to use and share resources over the network 
-                    for global connectivity. This course obtains requisite knowledge about hardware and software 
-                    tools and requirements of networks to acquire skills for establishment of network. Students will 
-                    learn to maintain and troubleshoot computer networks with its resources and services. 
+                    Advanced Java Programming is diversified level course which provides skills 
+                    for developing powerful GUI based friendly user interface, server side programming with 
+                    database. It is used to develop dynamic web site and client server application.
                 </p>
             </section>
 
