--- a/src/pages/resources/co-resources/Year 3/sem6/GIS_6P503.html
+++ b/src/pages/resources/co-resources/Year 3/sem6/GIS_6P503.html
@@ -49,24 +49,24 @@
 
         <main>
             <img
-                src="../../../../../../public/images/subjects_image/5th sem/cn.webp"
+                src="../../../../../../public/images/subjects_image/6th sem/gis.webp"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Computer Network</h1>
+                <h1>Geographical Information System</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">6P403</span>
+                    <span class="tag">6S503</span>
                 </p>
                 <div>
-                    <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong><span class="tag">Lecture</span><span class="tag">Practical</span>
                 </div>
                 <p>
                 </p>
                 <div>
-                    <strong>Category:</strong> <span class="tag">Degree</span>
+                    <strong>Category:</strong> <span class="tag">Degree</span><span class="tag">Elective</span>
                 </div>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
@@ -74,10 +74,12 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Computer networks is an applied level course aims to use and share resources over the network 
-                    for global connectivity. This course obtains requisite knowledge about hardware and software 
-                    tools and requirements of networks to acquire skills for establishment of network. Students will 
-                    learn to maintain and troubleshoot computer networks with its resources and services. 
+                    Geographic Information System (GIS) is applied level course deals with the analysis and 
+                    management of geographic information. This course offers an introduction to methods of 
+                    managing and processing geographic information. Emphasis will be placed on the nature of 
+                    geographic information, data models and structures for geographic information, geographic data 
+                    input, data manipulation and data storage, spatial analytic and modeling techniques, and error 
+                    analysis. 
                 </p>
             </section>
 
