--- a/src/pages/resources/co-resources/Year 3/sem6/UML_6P504.html
+++ b/src/pages/resources/co-resources/Year 3/sem6/UML_6P504.html
@@ -49,24 +49,24 @@
 
         <main>
             <img
-                src="../../../../../../public/images/subjects_image/5th sem/cn.webp"
+                src="../../../../../../public/images/subjects_image/6th sem/uml.webp"
                 alt="Subject Image"
                 class="subject-image"
                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Computer Network</h1>
+                <h1>Object Oriented Technology using Unified Modeling design</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">6P403</span>
+                    <span class="tag">6P504</span>
                 </p>
                 <div>
-                    <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong><span class="tag">Lecture</span><span class="tag">Practical</span>
                 </div>
                 <p>
                 </p>
                 <div>
-                    <strong>Category:</strong> <span class="tag">Degree</span>
+                    <strong>Category:</strong> <span class="tag">Degree</span><span class="tag">Elective</span>
                 </div>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
@@ -74,10 +74,11 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Computer networks is an applied level course aims to use and share resources over the network 
-                    for global connectivity. This course obtains requisite knowledge about hardware and software 
-                    tools and requirements of networks to acquire skills for establishment of network. Students will 
-                    learn to maintain and troubleshoot computer networks with its resources and services. 
+                    Object Oriented Technology is a diversified level course intends to create confidence in students 
+                    of Computer Engineering for an Object oriented approach to software development. It is based on 
+                    modeling objects from the real world and then using the model to build a language independent 
+                    design. This subject will be useful for student to understand concepts of object Oriented 
+                    Programming Systems & to model these concepts using UML for any application.
                 </p>
             </section>
 
