--- a/src/pages/resources/co-resources/Year 3/sem6/ADBMS_6P502.html
+++ b/src/pages/resources/co-resources/Year 3/sem6/ADBMS_6P502.html
@@ -66,7 +66,7 @@
                 <p>
                 </p>
                 <div>
-                    <strong>Category:</strong> <span class="tag">Degree</span>
+                    <strong>Category:</strong> <span class="tag">Degree</span><span class="tag">Elective</span>
                 </div>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
